# Traveller-Economics

./: .gitignore  INSTALL.md  LICENSE  MIGRATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  UNIVERSAL_TRADE_CIRCUIT_README.md  advanced_analysis.py  all_factions_analysis.py  config_example.py  debug_api.py  debug_trade_optimizer.py  debug_tsv.py  examples.py  pyproject.toml  quick_start.py  requirements.txt  run_all_factions.py  run_analysis.py  setup.sh  traveller_economics.py  trojan_reach_summary.py  trojan_reach_trade_optimizer.py  universal_trade_circuit_optimizer.py  usage_examples.py  visualizations.py
Analysis/: README.md  TROJAN_REACH_TRADE_ANALYSIS.md  UNIVERSAL_J2_C64_TRADE_CIRCUIT_ANALYSIS.md  UNIVERSAL_J3_C188_TRADE_CIRCUIT_ANALYSIS.md  advanced_economic_report.txt  all_factions_summary.txt  complete_universe_analysis.txt  summary_report.txt  trojan_reach_j2_c64_analysis.md
tests/: test_economic_analysis.py
